fixed off center images on max-width 992px

--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ html {
 	background-image: linear-gradient(90deg, rgb(206, 206, 206), rgb(167, 167, 167));
 }
 
+img {
+	margin: 0 auto;
+}
+
 .top-section-container {
 	padding: 120px 0 0;
 }
@@ -58,10 +62,6 @@ padding: 9px 20px;
     background-color: #fff;
     border: 1px solid #777;
     background-size: 200% auto;
-}
-
-.kilo-img {
-	padding: 6px 0 0;
 }
 
 @media screen and (max-width: 992px) {
